# advanced-python-for-ai-engineering

./: .gitignore  ESTADO_REVISION_NOTEBOOKS.md  INSTALACION.md  INSTRUCCIONES_REPARACION_FINAL.md  LEE_ESTO_PRIMERO.md  LICENSE  LIMPIEZA_REPOSITORIO.md  PLAN_ACCION_OPTIMIZADO.md  PLAN_DAYS_2-5.md  PLAN_REVISION_NOTEBOOKS.md  PROGRESO_REVISION.md  README.md  REPARACION_NOTEBOOKS_FINAL.md  RESUMEN_EJECUTIVO_NOTEBOOKS.md  RESUMEN_FINAL_TRABAJO.md  RESUMEN_PARA_PROFESOR.md  TEMPLATE_PEDAGOGICO.md  TRABAJO_REALIZADO.md  WORKSPACE_SETUP.md  jupyter_auto_fix.py  manual_fix.py  plan_de_formacion.md  pyproject.toml  recommendations.md  requirements.txt  setup_venv.py  virtual_env_installation_guide.md  vscode_plugins.md
.instructor/dia_5_soluciones/: README.md  SOLUCION_EJERCICIO_1.py  SOLUCION_EJERCICIO_2.py  SOLUCION_EJERCICIO_3.py
.kiro/steering/: course-standards.md  notebook-structure.md  pedagogical-structure.md
day_1/: 01_python_idioms_intro.ipynb  01_virtual_environments.ipynb  02_virtual_environments.ipynb  03_modules_and_imports.ipynb  04_package_distribution.ipynb  04_type_hinting.ipynb  05_code_quality_tools.ipynb  DOCUMENTATION_REFERENCES.md  EXERCISES_GUIDE.md  NOTEBOOK_IMPROVEMENTS.md  README.md  generate_notebook.py  requirements-minimal.txt  run_tests.bat  run_tests.sh
day_1/examples/: QUICK_REFERENCE.md  README.md  run_namespace_package.py  run_regular_package.py
day_1/exercises/: 05_code_quality_tools.py  README.md  README_01_idioms.md
day_2/: 01_comprehensions.ipynb  02_generators_iterators.ipynb  04_functional_programming.ipynb  05_context_managers.ipynb  06_magic_methods.ipynb  README.md
day_2/exercises/: 01_comprehensions.py
day_3/: 01_clean_functions.ipynb  02_meaningful_names.ipynb  03_type_hints_advanced.ipynb  04_error_handling.ipynb  05_comments_documentation.ipynb  06_dry_kiss_principles.ipynb  README.md
day_3/exercises/: 01_clean_functions.py  02_meaningful_names.py  03_type_hints_advanced.py  04_error_handling.py  05_comments_documentation.py  06_dry_kiss_principles.py  __init__.py
day_4/: 01_objects_vs_data_structures.ipynb  02_pydantic_vs_dataclasses.ipynb  03_classes_srp.ipynb  04_inheritance_vs_composition.ipynb  05_abstract_base_classes.ipynb  06_solid_principles.ipynb  README.md  requirements.txt
day_4/exercises/: 01_objects_vs_data_structures.py  02_pydantic_vs_dataclasses.py  03_classes_srp.py  04_inheritance_vs_composition.py  05_abstract_base_classes.py  06_solid_principles.py  __init__.py
day_5/: 01_unit_testing_pytest.ipynb  02_tdd.ipynb  03_numpy_vectorization.ipynb  04_pandas_optimization.ipynb  05_memory_profiling.ipynb  README.md  requirements.txt
day_5/exercises/: 04_pandas_optimization.py  05_memory_profiling.py  __init__.py  tdd_exercises.py  unit_testing_pytest.py
dia_1/: 01_python_idioms_intro.ipynb  02_virtual_environments.ipynb  03_modules_and_imports.ipynb  04_type_hinting.ipynb  05_code_quality_tools.ipynb  06_package_distribution.ipynb  CHECKLIST_INSTRUCTOR.md  EXERCISES_GUIDE.md  FAQ.md  GUIA_PROFESOR.md  INICIO_RAPIDO.md  MEJORAS_REALIZADAS.md  README.md  requirements.txt
dia_1/examples/: QUICK_REFERENCE.md  README.md  run_namespace_package.py  run_regular_package.py
dia_1/exercises/: 01_python_idioms.py  02_type_hinting.py  04_package_distribution.py  README.md  README_01_idioms.md  SOLUTIONS.md  __init__.py  idioms_01.py
dia_2/: 03_decorators.ipynb  06_magic_methods.ipynb  HATCHLING_VS_SETUPTOOLS.md  README.md  UV.md
dia_2/clean_code/: 01_meaningful_names.md  02_functions.md  03_comments.md
dia_2/exercises/: 06_magic_methods.py  README.md  __init__.py  pyproject.toml
dia_2/exercises/src/dia2_exercises/: __init__.py  comprehensions.py  functional_programming.py
dia_2/exercises/src/exercises/: __init__.py  comprehensions.py  context_managers.py  decorators.py  generators_iterators.py
dia_2/exercises/tests/: __init__.py  test_03_decorators.py  test_comprehensions.py  test_context_managers.py  test_decorators.py  test_generators_iterators.py
dia_3/: README.md
dia_3/clean_code/: 01_error_handling_and_logging.md  02_objects_and_data_structures.md  (+5 more)
dia_3/exercises/: README.md  pyproject.toml
dia_3/exercises/src/exercises/: __init__.py  defensive.py  error_handling.py  logging_practice.py  objects_data_structures.py
dia_3/exercises/tests/: __init__.py  test_defensive.py  test_error_handling.py  test_logging.py  test_objects_data_structures.py
dia_4/: README.md
dia_4/exercises/: .gitignore  README.md  pyproject.toml
dia_4/exercises/src/exercises/: __init__.py
dia_4/exercises/src/exercises/bloque_1/: README.md  __init__.py  helpers.py  models.py
dia_4/exercises/src/exercises/bloque_2/: README.md  __init__.py  helpers.py  preprocessing.py  protocols.py
dia_4/exercises/src/exercises/bloque_3/: README.md  __init__.py  helpers.py  protocols.py  scoring.py
dia_4/exercises/src/exercises/bloque_4/: README.md  __init__.py  evaluation.py  helpers.py  protocols.py
dia_4/exercises/tests/: __init__.py
dia_4/exercises/tests/bloque_1/: __init__.py  conftest.py  test_models.py
dia_4/exercises/tests/bloque_2/: __init__.py  conftest.py  test_preprocessing.py
dia_4/exercises/tests/bloque_3/: __init__.py  conftest.py  test_scoring.py
dia_4/exercises/tests/bloque_4/: __init__.py  conftest.py  test_evaluation.py
dia_5/: README.md
dia_5/exercises/: README.md  pyproject.toml
dia_5/exercises/src/exercises/: __init__.py  log_processor.py  record_validator.py  search_normalizer.py
dia_5/exercises/tests/: __init__.py  test_log_processor.py  test_record_validator.py  test_search_normalizer.py
my-project/: .env  cv_generado.txt  cv_master.txt  mis_datos.json  pyproject.toml
my-project/src/MiProyecto_Oscar/: main.py
my-project/src/cv_converter/: generators.py  main.py  models.py  readers.py
my-project/tests/: test_config.py  test_models.py  test_smoke.py
proyectos_integradores/: 01_data_pipeline_guia.md  02_log_analyzer_guia.md  03_csv_cleaner_guia.md  04_config_manager_guia.md  05_data_validator_guia.md  06_text_processing_guia.md  README.md  evaluacion.md  linters_config.md
(+46 files in other folders)
