[project]
name = "advanced-python-ai"
version = "1.0.0"
description = "Advanced Python for AI Engineering Course"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jupyter>=1.1.0",
    "notebook>=7.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["mi_entregable_brutal/src"]

# ============================================================================
# UV WORKSPACE CONFIGURATION
# ============================================================================
# Los proyectos de ejercicios heredan la configuración de Ruff de este archivo

[tool.uv.workspace]
members = [
    "dia_2/exercises",
    "dia_3/exercises",
]

# ============================================================================
# RUFF CONFIGURATION - Optimized for Clean Code
# ============================================================================
# Documentación oficial: https://docs.astral.sh/ruff/

[tool.ruff]
# Longitud máxima de línea (compatible con Black)
line-length = 100

# Versión de Python objetivo
target-version = "py311"

# Ancho de indentación
indent-width = 4

# Archivos y directorios a excluir
extend-exclude = [
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "*.egg-info",
]

[tool.ruff.lint]
# ============================================================================
# REGLAS HABILITADAS - Selección completa para Clean Code
# ============================================================================
select = [
    # Pyflakes (F) - Errores básicos de Python
    "F",
    
    # pycodestyle (E, W) - Estilo PEP 8
    "E",  # Errores
    "W",  # Warnings
    
    # isort (I) - Ordenamiento de imports
    "I",
    
    # pep8-naming (N) - Convenciones de nombres PEP 8
    "N",
    
    # pydocstyle (D) - Docstrings
    "D",
    
    # pyupgrade (UP) - Sintaxis moderna de Python
    "UP",
    
    # flake8-bugbear (B) - Bugs y anti-patrones comunes
    "B",
    
    # flake8-simplify (SIM) - Simplificación de código
    "SIM",
    
    # flake8-comprehensions (C4) - Mejores comprehensions
    "C4",
    
    # flake8-annotations (ANN) - Type hints
    "ANN",
    
    # flake8-bandit (S) - Seguridad
    "S",
    
    # flake8-builtins (A) - Shadowing de builtins
    "A",
    
    # flake8-commas (COM) - Trailing commas
    "COM",
    
    # flake8-errmsg (EM) - Mensajes de error
    "EM",
    
    # flake8-logging-format (G) - Logging
    "G",
    
    # flake8-print (T20) - Print statements
    "T20",
    
    # flake8-pytest-style (PT) - Pytest best practices
    "PT",
    
    # flake8-quotes (Q) - Consistencia de comillas
    "Q",
    
    # flake8-return (RET) - Return statements
    "RET",
    
    # flake8-raise (RSE) - Raise statements
    "RSE",
    
    # flake8-self (SLF) - Acceso a miembros privados
    "SLF",
    
    # flake8-type-checking (TC) - Type checking imports
    "TC",
    
    # flake8-unused-arguments (ARG) - Argumentos no usados
    "ARG",
    
    # flake8-use-pathlib (PTH) - Uso de pathlib
    "PTH",
    
    # Pylint (PL) - Reglas de Pylint
    "PLC",  # Convention
    "PLE",  # Error
    "PLR",  # Refactor
    "PLW",  # Warning
    
    # Ruff-specific (RUF) - Reglas específicas de Ruff
    "RUF",
    
    # tryceratops (TRY) - Exception handling
    "TRY",
    
    # Perflint (PERF) - Performance
    "PERF",
    
    # flynt (FLY) - f-strings
    "FLY",
]

# ============================================================================
# REGLAS IGNORADAS - Excepciones justificadas
# ============================================================================
ignore = [
    # D100-D107: Docstrings opcionales en algunos contextos
    "D100",  # Missing docstring in public module (opcional para scripts)
    "D104",  # Missing docstring in public package (opcional para __init__.py simples)
    
    # ANN: Type hints opcionales en algunos casos
    "ANN101",  # Missing type annotation for self (redundante)
    "ANN102",  # Missing type annotation for cls (redundante)
    "ANN401",  # Dynamically typed expressions (Any) - a veces necesario
    
    # S: Seguridad - ajustes para desarrollo
    "S101",   # Use of assert (común en tests)
    "S311",   # Standard pseudo-random generators (OK para no-crypto)
    
    # COM812: Trailing comma - puede conflictuar con formatter
    "COM812",
    
    # ISC001: Implicit string concatenation - puede conflictuar con formatter
    "ISC001",
    
    # PLR: Complejidad - ajustar según necesidad del proyecto
    "PLR0913",  # Too many arguments (ajustar max-args si es necesario)
    
    # TRY003: Mensajes largos en excepciones (a veces necesario)
    "TRY003",
]

# ============================================================================
# CONFIGURACIÓN DE REGLAS ESPECÍFICAS
# ============================================================================

# Permitir auto-fix para todas las reglas habilitadas
fixable = ["ALL"]
unfixable = []

# Variables dummy (con underscore) permitidas
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests: permitir prints, asserts, y magic values
"**/tests/**/*.py" = ["T20", "S101", "PLR2004", "ANN"]
"**/test_*.py" = ["T20", "S101", "PLR2004", "ANN"]

# __init__.py: permitir imports no usados y re-exports
"**/__init__.py" = ["F401", "F403", "D104"]

# Scripts y ejemplos: más permisivos
"**/examples/**/*.py" = ["T20", "D103"]
"**/scripts/**/*.py" = ["T20", "D103"]

# Notebooks convertidos: más permisivos
"*.ipynb" = ["T20", "D100", "E402"]

[tool.ruff.lint.pydocstyle]
# Usar convención Google para docstrings
convention = "google"

[tool.ruff.lint.isort]
# Configuración de ordenamiento de imports
known-first-party = ["exercises", "mi_entregable_brutal"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-annotations]
# Permitir decoradores dinámicos sin type hints
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
# Extender reglas de bugbear
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.pylint]
# Límites de complejidad
max-args = 7
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.mccabe]
# Complejidad ciclomática máxima
max-complexity = 10

[tool.ruff.format]
# ============================================================================
# CONFIGURACIÓN DEL FORMATTER
# ============================================================================

# Usar comillas dobles (compatible con Black)
quote-style = "double"

# Indentar con espacios
indent-style = "space"

# Respetar trailing commas mágicas
skip-magic-trailing-comma = false

# Detectar line endings automáticamente
line-ending = "auto"

# Formatear ejemplos de código en docstrings
docstring-code-format = true

# Longitud de línea para código en docstrings
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
