
[project]
name = "mi-proyecto-oscar"
version = "0.1.0"
description = "Proyecto del curso Advanced Python for AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff",
    "pyright"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/MiProyecto_Oscar"]