[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-converter"
version = "0.1.0"
description = "Herramienta para transformar CVs al formato corporativo de Hiberus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",  
    "ruff",             
    "pyright"           
]

[tool.hatch.build.targets.wheel]
packages = ["src/cv_converter"]