[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exercises"
version = "0.1.0"
description = "Ejercicios prácticos del Día 2"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/exercises"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py311"