[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exercises"
version = "0.1.0"
description = "Ejercicios Día 3: Error Handling, Logging y Defensive Programming"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
]

# [tool.hatch.build.targets.wheel]
# packages = ["src/exercises"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
