[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exercises"
version = "0.1.0"
description = "Ejercicios Día 3: Error Handling, Logging y Defensive Programming"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
]

# [tool.hatch.build.targets.wheel]
# packages = ["src/exercises"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================
# NOTA: Este proyecto hereda la configuración completa de Ruff del workspace root
# Solo se especifican aquí las diferencias específicas para ejercicios

[tool.ruff]
# Heredar configuración del root, solo override lo necesario
line-length = 100  # Consistente con root
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Ejercicios: permitir prints para debugging y ejemplos
"src/exercises/**/*.py" = ["T20", "D103"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
