[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exercises"
version = "0.1.0"
description = "Ejercicios Día 5: Testing con pytest"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

# [tool.hatch.build.targets.wheel]
# packages = ["src/exercises"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================
# NOTA: Este proyecto hereda la configuración completa de Ruff del workspace root
# Solo se especifican aquí las diferencias específicas para ejercicios

[tool.ruff]
# Heredar configuración del root, solo override lo necesario
line-length = 100  # Consistente con root
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Ejercicios: permitir prints para debugging y ejemplos
"src/exercises/**/*.py" = ["T20", "D103"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
